<resources>
    <string name="About_Us">关于我们</string>
    <string name="Account_expiration">该账户已过期!</string>
    <string name="Account_has_been_disabled">账户已被禁用!</string>
    <string name="Account_information_error">账户信息错误!</string>
    <string name="Account_information_has_expired">账户信息已失效!</string>
    <string name="Activity_Zone">活动专区</string>
    <string name="Activity_not_opened">活动尚未开启</string>
    <string name="After_successful_redemption">兑换成功后</string>
    <string name="Authority_Center">授权中心</string>
    <string name="Cancel_collection_successful">取消收藏成功!</string>
    <string name="Card_exchange">使用卡密兑换</string>
    <string name="Category_failure">类目请求失败!</string>
    <string name="Change_resolution">秒后更换解析端</string>
    <string name="Change_resolutions">秒后反馈/换源</string>
    <string name="Check_in">打卡签到</string>
    <string name="Check_in_successful">打卡成功!系统奖励您</string>
    <string name="Clean_up_records">清理记录</string>
    <string name="Cleanup_successful">全部清理干净啦O(∩_∩)O</string>
    <string name="Collection_record_cleaning_successful">收藏记录清理成功!</string>
    <string name="Collection_successful">收藏成功!</string>
    <string name="Coming_soon">即将为您播放</string>
    <string name="Data_cache_cleaning_successful">数据缓存清理成功!</string>
    <string name="Data_cleared">数据清空了!</string>
    <string name="Detecting_accounts">检测到您的账户暂未绑定</string>
    <string name="Expiration_time">到期时间：</string>
    <string name="Expired">已到期</string>
    <string name="Film">部影片</string>
    <string name="History_playback">历史播放</string>
    <string name="Hot_broadcast">热映</string>
    <string name="IJK_DECODE">1</string>
    <string name="Incorrect_format">邮箱/手机格式不正确!</string>
    <string name="Incorrect_length">邮箱/手机长度不正确!</string>
    <string name="Input_authorization">输入授权码</string>
    <string name="Invitation_rewards">邀请奖励</string>
    <string name="Length_Error">长度不正确</string>
    <string name="Lifetime_VIP">永久会员</string>
    <string name="Logged_in">已登录!</string>
    <string name="MOVIE_4K">蓝光</string>
    <string name="MOVIE_ZB">少儿</string>
    <string name="My_Account">我的账户</string>
    <string name="My_Collection">我的收藏</string>
    <string name="My_TV_series">我的追剧</string>
    <string name="N_A">N/A</string>
    <string name="Network_Settings">网络设置</string>
    <string name="Network_not_connected">网络未连接</string>
    <string name="No_Content">亲,没有搜索到相关内容!!</string>
    <string name="No_account_entered">您还没输入账号!</string>
    <string name="No_collect">小伙伴!你还没有收藏记录哦!!</string>
    <string name="No_data_source">对不起!没有找到数据源，请切换其它源.</string>
    <string name="No_deletion">已经没有影片可以清除啦!</string>
    <string name="No_email_phone">您还没输入邮箱/手机!</string>
    <string name="No_favorites">小伙伴!你还没有收藏哦!!</string>
    <string name="No_invitation_code">您还没输入邀请码!</string>
    <string name="No_password_entered">您还没输入密码!</string>
    <string name="No_record">小伙伴!你还没有观看记录哦!!</string>
    <string name="No_results_yet">暂无搜索结果</string>
    <string name="No_selection">您还没有选中删除的影片!</string>
    <string name="Not_yet_activated">此功能尚未开通!</string>
    <string name="Obtaining_membership">积分获得会员</string>
    <string name="Order_does_not_exist">订单不存在!</string>
    <string name="Order_exception">订单异常,请重试!</string>
    <string name="Other_settings">其他设置</string>
    <string name="Payment_successful_recharge_failed">支付成功,但充值失败!</string>
    <string name="Personal_Center">个人中心</string>
    <string name="Personality_settings_cleared_successfully">个性设置清理成功!</string>
    <string name="Personalized_settings">个性设置</string>
    <string name="Play_Source">播放源：</string>
    <string name="Playback_Settings">播放设置</string>
    <string name="Playback_record_cleaning_successful">播放记录清理成功!</string>
    <string name="Please_log_in_to_your_account_first">请先登录账号!</string>
    <string name="Please_select">请选择:</string>
    <string name="Recharged_successfully">充值成功!</string>
    <string name="Record_cleaning">记录清理</string>
    <string name="Redemption_of_points">使用积分兑换</string>
    <string name="Redemption_successful">兑换成功!</string>
    <string name="Scan_QR_code">请扫描屏幕上的二维码!</string>
    <string name="Scan_code_to_purchase">扫码购</string>
    <string name="See_more">查看更多</string>
    <string name="Set_successfully">设置成功,退出该界面才能看到效果哦!</string>
    <string name="Sniffing_message">嗅探调试模式-请关注小窗口内容!</string>
    <string name="Sniffing_messages">嗅探调试模式-当前系统版本无法嗅探!</string>
    <string name="Successfully_cancelled_the_following_drama">取消追剧成功!</string>
    <string name="Successfully_cleared_drama_tracking_records">追剧记录清理成功!</string>
    <string name="Successfully_followed_the_drama">追剧成功!</string>
    <string name="Theme_successful">主题更换成功,重启APP后生效!</string>
    <string name="Tip">温馨提醒:如遇视频卡顿,请更换下面的播放源,请勿相信视频里的广告!</string>
    <string name="Tips">温馨提示</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_unknown">Unknown</string>
    <string name="TrackType_video">Video</string>
    <string name="Try_to_see_expired">账户过期试看</string>
    <string name="Turn_soff_sVPN">请关闭VPN或HttpCanary等软件后使用!</string>
    <string name="Turn_soff_sXP">请勿在Xposed等环境下使用!</string>
    <string name="Update_Now">立即更新</string>
    <string name="Update_later">稍后更新</string>
    <string name="Upgrade">版本升级</string>
    <string name="Used_time">已用时</string>
    <string name="Verification_code_error">验证码不正确</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkAliMediaPlayer">Player: IjkAliMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>
    <string name="Wallpaper_replacement_successful">壁纸更换成功!</string>
    <string name="Welcome_back">校验成功!</string>
    <string name="a_cache">a-cache</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abnormal">异常,已为您上报!</string>
    <string name="about_info_recover">恢复出厂值</string>
    <string name="about_setting_info_without">无</string>
    <string name="about_update_text">检测更新</string>
    <string name="account">账户：</string>
    <string name="action_settings">Settings</string>
    <string name="activity_history">历史记录</string>
    <string name="ad_jump">OK跳过</string>
    <string name="alert_record">追剧记录</string>
    <string name="analysis">当前解析端</string>
    <string name="app_downlond">商城功能暂未开放...</string>
    <string name="app_downlond_no_ok">文件还没下载完成，请耐心等待</string>
    <string name="app_name">小兔影视</string>
    <string name="app_store">应用中心</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="area">地区</string>
    <string name="areas">地区：</string>
    <string name="author">HaiXin</string>
    <string name="authorization_codes">授权码：</string>
    <string name="background_setting">背景设置</string>
    <string name="binding">立即绑定</string>
    <string name="bit_rate">bit_rate</string>
    <string name="blackspot">可能存在安全隐患,是否立即绑定?</string>
    <string name="bored">你也太无聊了吧...</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="briefly">简介：</string>
    <string name="cancellationpt">跳过片头已取消!</string>
    <string name="cancellationpw">跳过片尾取消!</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="clear">清除</string>
    <string name="clear_all">全部清除</string>
    <string name="close">Close</string>
    <string name="code">验证码</string>
    <string name="default_wifi_ap_pass">shenma123</string>
    <string name="empower">扫码登录</string>
    <string name="forget_password">找回密码</string>
    <string name="input_password">请输入密码</string>
    <string name="input_so">关键词...</string>
    <string name="input_text">极速/精准搜索: 太极 = TJ / TAIJI</string>
    <string name="input_text2">多音字: 嬛 = XUAN 或 HUAN</string>
    <string name="input_username">请输入账户</string>
    <string name="input_wifi_ap_name">ShenmaTvAP</string>
    <string name="ip_tips">"注意：采用NAT网络模式的设备（比如小米2），
上面显示的连接会是http://10.0.2.15:10101，
连接时把10.0.2.15替换成wifi或有线网络的IP地址。"</string>
    <string name="please_input_password">请输入密码</string>
    <string name="remote_tips">"1、请确认远程PC端和网络机顶盒处于同一个局域网内
2、在远程PC端上传APK文件时，请不要退出当前界面
3、在远程PC端上传APK文件时，可以拖动到网页上传
4、如果上传成功，界面会弹出安装提示，请选择安装
5、如果APK过大，上传时间可能会延长，请耐心等待
"</string>
    <string name="remotely">远程安装</string>
    <string name="search">搜索</string>
    <string name="show_pass">显示密码</string>
    <string name="str_user_description">选中按菜单键或长按OK键</string>
    <string name="type_details_sum">共 部</string>
    <string name="user_form_name">账号</string>
    <string name="wifi_ap_name">名称</string>
    <string name="wifi_invi">邀请码</string>
    <string name="wifi_invis">登录请留空</string>
    <string name="wifi_secure_type">类型</string>
    <string name="wifi_ssid_name">名称</string>
    <string name="wifi_ssid_pass">密码</string>
</resources>