<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_vertical" android:layout_gravity="center" android:orientation="vertical" android:layout_width="@dimen/sm_400" android:layout_height="@dimen/sm_210"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:paddingLeft="@dimen/sm_4" android:layout_width="@dimen/sm_400" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/sm_23" android:textColor="@color/white" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/user_form_name" />
        <EditText android:textSize="@dimen/sm_23" android:id="@id/user_name_et" android:background="@drawable/edit_bg" android:layout_width="@dimen/sm_200" android:layout_height="@dimen/sm_31" android:layout_marginLeft="@dimen/sm_20" android:hint="@string/input_username" android:singleLine="true" />
        <Button android:textSize="@dimen/sm_23" android:textColor="@color/white" android:id="@id/user_empower" android:background="@drawable/forget_dialog_bt_selector" android:visibility="gone" android:layout_width="@dimen/sm_110" android:layout_height="@dimen/sm_30" android:layout_marginLeft="@dimen/sm_10" android:layout_marginRight="@dimen/sm_10" android:text="扫码登录" android:hint="@string/empower" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:paddingLeft="@dimen/sm_4" android:layout_width="@dimen/sm_400" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sm_25">
        <TextView android:textSize="@dimen/sm_23" android:textColor="@color/white" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="@dimen/sm_31" android:text="@string/wifi_ssid_pass" />
        <EditText android:textSize="@dimen/sm_23" android:id="@id/user_pass_et" android:background="@drawable/edit_bg" android:layout_width="@dimen/sm_200" android:layout_height="@dimen/sm_31" android:layout_marginLeft="@dimen/sm_20" android:hint="@string/input_password" android:singleLine="true" android:inputType="text" />
        <Button android:textSize="@dimen/sm_23" android:textColor="@color/white" android:id="@id/user_password" android:background="@drawable/forget_dialog_bt_selector" android:layout_width="@dimen/sm_110" android:layout_height="@dimen/sm_32" android:layout_marginLeft="@dimen/sm_10" android:layout_marginRight="@dimen/sm_10" android:text="找回密码" android:hint="@string/forget_password" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/user_inv" android:paddingLeft="@dimen/sm_4" android:visibility="gone" android:layout_width="@dimen/sm_250" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sm_25">
        <TextView android:textSize="@dimen/sm_23" android:textColor="@color/white" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="@dimen/sm_31" android:text="@string/wifi_invi" />
        <EditText android:textSize="@dimen/sm_23" android:id="@id/user_inv_et" android:background="@drawable/edit_bg" android:layout_width="@dimen/sm_160" android:layout_height="@dimen/sm_31" android:layout_marginLeft="@dimen/sm_10" android:hint="@string/wifi_invis" android:singleLine="true" android:inputType="number" />
    </LinearLayout>
</LinearLayout>