<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_vertical" android:layout_gravity="center" android:orientation="vertical" android:layout_width="@dimen/sm_320" android:layout_height="@dimen/sm_210"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:paddingLeft="@dimen/sm_4" android:layout_width="@dimen/sm_320" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/sm_23" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wifi_ap_name" />
        <EditText android:textSize="@dimen/sm_23" android:id="@id/wifi_ap_name_et" android:background="@drawable/edit_bg" android:layout_width="fill_parent" android:layout_height="@dimen/sm_31" android:layout_marginLeft="@dimen/sm_20" android:text="@string/input_wifi_ap_name" android:singleLine="true" />
    </LinearLayout>
    <RelativeLayout android:gravity="center_vertical" android:id="@id/wifi_ap_secure_rl" android:background="@drawable/selector_seetting_play_item_bg" android:focusable="true" android:layout_width="@dimen/sm_320" android:layout_height="@dimen/sm_41" android:layout_marginTop="@dimen/sm_5">
        <TextView android:textSize="@dimen/sm_23" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/wifi_secure_type" android:layout_alignParentLeft="true" />
        <ImageButton android:id="@id/wifi_ap_secure_right_arrows" android:background="@android:color/transparent" android:layout_width="@dimen/sm_30" android:layout_height="@dimen/sm_30" android:layout_marginRight="@dimen/sm_16" android:src="@drawable/select_right_arrows_n" android:scaleType="fitXY" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        <TextView android:textSize="@dimen/sm_23" android:gravity="center" android:id="@id/wifi_ap_secure_decode_text" android:layout_width="@dimen/sm_115" android:layout_height="wrap_content" android:layout_toLeftOf="@id/wifi_ap_secure_right_arrows" android:layout_centerVertical="true" />
        <ImageButton android:id="@id/wifi_ap_secure_left_arrows" android:background="@android:color/transparent" android:layout_width="@dimen/sm_30" android:layout_height="@dimen/sm_30" android:src="@drawable/select_left_arrows_n" android:scaleType="fitXY" android:layout_toLeftOf="@id/wifi_ap_secure_decode_text" android:layout_centerVertical="true" />
    </RelativeLayout>
    <LinearLayout android:orientation="horizontal" android:paddingLeft="@dimen/sm_4" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sm_5">
        <TextView android:textSize="@dimen/sm_23" android:gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="@dimen/sm_31" android:text="@string/wifi_ssid_pass" />
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/sm_20">
            <EditText android:textSize="@dimen/sm_23" android:id="@id/wifi_ap_pass_et" android:background="@drawable/edit_bg" android:layout_width="fill_parent" android:layout_height="@dimen/sm_31" android:text="@string/default_wifi_ap_pass" android:singleLine="true" />
            <CheckBox android:id="@id/wifi_ap_showpass_cb" android:layout_width="@dimen/sm_18" android:layout_height="@dimen/sm_15" android:layout_marginTop="@dimen/sm_10" android:checked="true" android:layout_below="@id/wifi_ap_pass_et" style="@style/MyCheckBox" />
            <TextView android:textSize="@dimen/sm_20" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/sm_10" android:layout_marginTop="@dimen/sm_4" android:text="@string/show_pass" android:layout_toRightOf="@id/wifi_ap_showpass_cb" android:layout_below="@id/wifi_ap_pass_et" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>