<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:background="#ff3b4b73" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="@dimen/sm_480" android:layout_height="fill_parent">
        <LinearLayout android:gravity="center" android:orientation="horizontal" android:paddingRight="@dimen/sm_35" android:layout_width="@dimen/sm_480" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/sm_20" android:layout_marginTop="@dimen/sm_30">
            <ImageView android:id="@id/search_keybord_full_voice" android:focusable="true" android:layout_width="@dimen/sm_50" android:layout_height="@dimen/sm_50" android:src="@drawable/keypad_voice_selector" />
            <EditText android:textSize="14.0sp" android:textColor="@color/white" android:textColorHint="@color/white" android:ellipsize="start" android:gravity="center_vertical" android:id="@id/search_keybord_input" android:paddingLeft="8.0dip" android:paddingRight="5.0dip" android:layout_width="0.0dip" android:layout_height="@dimen/sm_80" android:hint="@string/input_so" android:singleLine="true" android:layout_weight="2.0" android:imeOptions="actionSearch" />
        </LinearLayout>
        <FrameLayout android:id="@id/keyboard_view" android:layout_width="@dimen/sm_480" android:layout_height="wrap_content" android:layout_weight="1.5">
            <include android:layout_gravity="center_horizontal" android:id="@id/search_keybord_full_layout" android:layout_width="wrap_content" android:layout_height="wrap_content" layout="@layout/mv_search_keybord_full" />
        </FrameLayout>
        <TextView android:textSize="@dimen/sm_18" android:textColor="@color/white" android:layout_gravity="center_horizontal" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/input_text" />
        <TextView android:textSize="@dimen/sm_18" android:textColor="@color/white" android:layout_gravity="center_horizontal" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/input_text2" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="horizontal" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/sm_25" android:layout_marginTop="@dimen/sm_10">
            <TextView android:textSize="@dimen/sm_50" android:textColor="@color/white" android:id="@id/type_details_sum" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/sm_10" android:layout_marginTop="@dimen/sm_5" android:text="@string/search" />
            <ImageView android:layout_width="@dimen/sm_10" android:layout_height="@dimen/sm_80" android:layout_marginLeft="@dimen/sm_10" android:src="@drawable/vod_line35" />
            <TextView android:textSize="@dimen/sm_25" android:textColor="@color/white" android:layout_gravity="center" android:id="@id/SearchText" android:paddingLeft="@dimen/sm_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/sm_10" android:text="" />
        </LinearLayout>
        <GridView android:id="@id/search_result" android:focusableInTouchMode="true" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="10.0dip" android:verticalSpacing="@dimen/sm_20" />
        <TextView android:textSize="@dimen/sm_30" android:textColor="#ffffffff" android:gravity="center" android:id="@id/search_empty_text" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/No_results_yet" />
    </LinearLayout>
</LinearLayout>